--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Build APK
+          name: Make Gradle Wrapper Executable
           command: chmod +x ./gradlew
+      - run:
+          name: Build APK
+          command: ./gradlew assembleDebug
       - store_artifacts:
           path: app/build/outputs/apk/debug/app-debug.apk
           destination: app-debug.apk
@@ -24,14 +27,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Run Unit Tests
+          name: Make Gradle Wrapper Executable
           command: chmod +x ./gradlew
       - restore_cache:
           keys:
             - v1-gradle-cache-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
       - run:
           name: Run Unit Tests
-          command: chmod +x ./gradlew
+          command: ./gradlew testDebugUnitTest
       - save_cache:
           paths:
             - ~/.gradle/caches
