--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,28 @@ executors:
       - image: cimg/android:2024.09
     environment:
       JVM_OPTS: -Xmx4096m
+
 jobs:
   build:
     executor: android-executor
     steps:
       - checkout
       - run:
+          name: Verify build.gradle exists
+          command: ls -al && ls -al app/
+      - restore_cache:
+          keys:
+            - v1-gradle-cache-{{ checksum "build.gradle" }}
+            - v1-gradle-cache-{{ checksum "app/build.gradle" }}
+            - v1-gradle-cache-default
+      - run:
           name: Build APK
-          command: chmod +x ./gradlew
+          command: chmod +x ./gradlew && ./gradlew assembleDebug
+      - save_cache:
+          paths:
+            - ~/.gradle/caches
+            - ~/.gradle/wrapper
+          key: v1-gradle-cache-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
       - store_artifacts:
           path: app/build/outputs/apk/debug/app-debug.apk
           destination: app-debug.apk
@@ -24,14 +38,16 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Run Unit Tests
-          command: chmod +x ./gradlew
+          name: Verify build.gradle exists
+          command: ls -al && ls -al app/
       - restore_cache:
           keys:
-            - v1-gradle-cache-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
+            - v1-gradle-cache-{{ checksum "build.gradle" }}
+            - v1-gradle-cache-{{ checksum "app/build.gradle" }}
+            - v1-gradle-cache-default
       - run:
           name: Run Unit Tests
-          command: chmod +x ./gradlew
+          command: chmod +x ./gradlew && ./gradlew testDebugUnitTest
       - save_cache:
           paths:
             - ~/.gradle/caches
@@ -42,11 +58,7 @@ jobs:
       - store_artifacts:
           path: app/build/reports/tests/testDebugUnitTest
           destination: unit_test_reports
-restore_cache:
-  keys:
-    - v1-dependencies-{{ checksum "build.gradle" }}
-    - v1-dependencies-{{ checksum "app/build.gradle" }}
-    - v1-dependencies
+
 workflows:
   version: 2
   build_and_test:
